crates/toml_edit/tests/snapshots/invalid/array/no-close-05.stderr
TOML parse error at line 1, column 27
  |
1 | no-close-05 = [{ key = 42}
  |                           ^
unclosed array, expected `]`
